# 0x6502

./: .gitignore  .gitmodules  LICENCE.md  README.md  meson.build
docs/: InstructionsSupport.md
include/emu/: types.hpp
include/emu/components/: cpu.hpp  hardwareset.hpp  ram.hpp  rom.hpp
include/emu/components/instructions/: JSR.hpp  LDA_IM.hpp  LDA_ZP.hpp  LDA_ZPX.hpp  TEMPLATE.hpp  adressing_modes.hpp  instructions.hpp
include/emu/graphics/: glad.h  window.hpp
src/: addressing_modes.cpp  cpu.cpp  instructions.cpp  main.cpp  meson.build  ram.cpp  rom.cpp
src/graphics/: glad.cpp  meson.build  window.cpp
src/tests/: meson.build  suite.cpp  suite.hpp
src/tests/instructions/: lda_tests.cpp  meson.build
